# django-shopapp

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: logs.txt  requirements.txt
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/management/commands/: create_article.py  create_author.py  create_category.py  create_tag.py
mysite/blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py  0005_article_title_author_name_category_name_tag_name_and_more.py  0006_rename_tags_article_tag.py
mysite/blogapp/templates/blogapp/: article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixtures.json  products-fixtures.json  users-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_by.py  0003_order.py  0004_alter_order_products.py  0005_alter_order_options_alter_product_options.py  0006_alter_order_delivery_address_alter_order_products_and_more.py  0007_alter_product_description_alter_product_discount_and_more.py  0008_alter_product_description_alter_product_name.py
mysite/user_auth/: models.py  urls.py  views.py
mysite/user_auth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py  0004_alter_profile_agree_save_data_and_more.py  0005_alter_profile_agree_save_data_alter_profile_avatar_and_more.py  0006_alter_profile_agree_save_data.py
(+15 files in other folders)
