[tool.poetry]
name = "django-shopapp"
version = "0.1.0"
description = ""
authors = ["Chelovecki <benkozlovv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-debug-toolbar = "^4.4.6"
django-filter = "^24.3"
drf-spectacular = "^0.28.0"
pillow = "^11.0.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
